WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
301867
Fix the internal build when using some versions of the iOS SDK
https://bugs.webkit.org/show_bug.cgi?id=301867
Summary
Fix the internal build when using some versions of the iOS SDK
Wenson Hsieh
Reported
2025-11-03 09:07:56 PST
rdar://163270786
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2025-11-03 09:10:08 PST
Pull request:
https://github.com/WebKit/WebKit/pull/53348
EWS
Comment 2
2025-11-04 08:34:10 PST
Committed
302544@main
(5aac70aee6f5): <
https://commits.webkit.org/302544@main
> Reviewed commits have been landed. Closing PR #53348 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug