Fix the internal build when using some versions of the iOS SDK https://bugs.webkit.org/show_bug.cgi?id=301867 rdar://163270786

Reviewed by Abrar Rahman Protyasha.

Avoid build failures due to duplicate or conflicting SPI / IPI declarations, due to these symbols
being either moved around or renamed in the SDK.

No change in behavior.

* Source/WebCore/PAL/pal/spi/cocoa/UIFoundationSPI.h:

Add definitions to map each of the new API names back to shipping (deprecated) symbol names, to
ensure source compatibility when building with older SDKs on macOS (where these symbol names are
already public API anyways). This allows us to use only the newer names in our source code without
breaking older macOS builds.

* Source/WebCore/PAL/pal/spi/ios/UIKitSPI.h:
* Source/WebCore/editing/cocoa/AttributedString.mm:
(WebCore::configureNSTextBlockFromParagraphStyleCommonTableAttributes):
(WebCore::reconstructNSTextBlockVerticalAlignment):
(WebCore::reconstructNSTextTableLayoutAlgorithm):
(WebCore::extractTextTableBlockVerticalAlignment):
(WebCore::extractTextTableLayoutAlgorithm):
(WebCore::extractParagraphStyle):
* Source/WebCore/editing/cocoa/NodeHTMLConverter.mm:
(HTMLConverter::_fillInBlock):
(HTMLConverter::_addTableForElement):
(HTMLConverter::_addTableCellForElement):
* Source/WebCore/platform/ios/wak/WAKAppKitStubs.h:

Make the type of `NSRectEdge` consistent with the definition in the SDK (as well as the new forward
declarations).

* Tools/TestRunnerShared/spi/UIKitSPIForTesting.h:
* Tools/TestWebKitAPI/Tests/WebKitCocoa/WKWebViewGetContents.mm:
(TestWebKitAPI::TEST(WKWebView, AttributedStringFromTable)):

Canonical link: https://commits.webkit.org/302544@main